--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>KFC clone</title>
+    <title>KFC | Order KFC Chicken Online</title>
+    <link rel="icons" href="icons/KFC_Logo.svg">
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-
-<!--  header     -->
-
+<header class="header">
     <div class="location-data">
         <div>
          <img class="location-logo" src="icons/Search_Pin.e88a4d93location.svg"> 
@@ -36,14 +35,14 @@
         <div class="nav-menu1">sign in</div>
       </div>
 
-    <!--  nav bar   -->
-
       <div class="cart-nav" >
         <div class="nav-entity" >&#8377;0</div>
         <img class="cart-logo" src="icons/bucket_cart_icon.svg">
       </div>
     </div>
   </nav>
+</header>
+<main>
   <div class="head">
       <div class="header-title">LET'S ORDER FOR DELIVERY, PICK UP, OR DINE-IN</div>
       <button class="order-button">Start Order</button>
@@ -51,8 +50,6 @@
   <div class="banner-1">
     <img class="banner-image" src="banners/web_1440x396px.webp">
   </div>
-
-<!-- main  section  -->
 
   <div class="general-menu-container">
     <div class="browser-title" >
@@ -169,9 +166,7 @@
         <div class="line-separator"></div>
         
         </div>
-
-    <!--    footer    -->
-
+      </main>
         <footer>
           <div class="nav-container">
             <img class="kfc-footer-logo" src="icons/KFC_Logo.svg">
@@ -217,9 +212,9 @@
                 <img class="location-red" src="icons/Find_KFC red.svg">
                 <div><a class="find-kfc"><a href="https://restaurants.kfc.co.in/">Find a KFC</a></div>
               </div>
-              <div>
-                <img class="apps-logo" src="icons/google_play.svg">
-                <img  class="apps-logo2" src="icons/apple.svg">
+              <div class="applogo">
+                <img class="apps-logo" src="icons/google_play.svg" height="40">
+                <img  class="apps-logo2" src="icons/apple.svg" height="40" >
               </div>
             </div>
           </div>
